# libgpg-error

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.CVS  THANKS  autogen.rc  autogen.sh  configure.ac  libgpg-error.spec.in  libtool  ltmain.sh
build-aux/: config.guess  config.sub  libtool-patch.sed  libtool.patch  ltmain.sh
contrib/: ChangeLog
contrib/conf-w32ce-msc/: build.mk  config.h
doc/: HACKING  Makefile.am  errorref.txt  gpgrt.texi  ldap2gpgerr.c  yat2m.c
gpgscm/: Makefile.am  ffi-private.h  ffi.c  ffi.h  ffi.scm  gnupg.scm  lib.scm  main.c  makefile.scm  private.h  repl.scm  scheme-config.h  scheme.c  small-integers.h  t-child.c  t-child.scm  tests.scm  time.scm  xml.scm
lang/cl/: Makefile.am  README  gpg-error-package.lisp  gpg-error.asd  gpg-error.asd.in  gpg-error.lisp  mkerrcodes.awk
m4/: ChangeLog  Makefile.am  estream.m4  libtool.m4  threadlib.m4
po/: ChangeLog  LINGUAS  Makevars  cs.po  da.po  de.po  eo.po  es.po  fr.po  hu.po  it.po  ja.po  libgpg-error.pot  nl.po  pl.po  pt.po  ro.po  ru.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
src/: Makefile.am  argparse.c  b64dec.c  b64enc.c  code-from-errno.c  code-to-errno.c  err-codes.h.in  err-sources.h.in  errnos.in  estream-printf.c  estream-printf.h  estream.c  estream.h  gen-lock-obj.sh  gen-posix-lock-obj.c  gpg-error-config-head.in  gpg-error-config-main.sh  gpg-error-config-new.in  gpg-error-config-test.sh  gpg-error-config-test.sh.in  gpg-error-config.in  gpg-error.c  gpg-error.def  gpg-error.def.in  gpg-error.h  gpg-error.h.in  gpg-error.m4  gpg-error.pc.in  gpg-error.vers  gpgrt-config  gpgrt-config.in  gpgrt-int.h  gpgrt.m4  init.c  init.h  logging.c  logging.h  mkerrcodes.awk  mkerrcodes.c  mkerrcodes1.awk  (+34 more)
src/gpg/: error.h
src/gpg-extra/: errno.h
src/syscfg/: lock-obj-pub.aarch64-unknown-linux-androideabi.h  lock-obj-pub.arm-unknown-linux-gnueabihf.h  lock-obj-pub.armv5-unknown-linux-musleabi.h  lock-obj-pub.armv6-unknown-linux-musleabihf.h  lock-obj-pub.armv7-unknown-linux-gnueabihf.h  lock-obj-pub.hppa-unknown-linux-gnu.h  lock-obj-pub.i486-pc-gnu.h  lock-obj-pub.i486-pc-kfreebsd-gnu.h  lock-obj-pub.i486-pc-linux-gnu.h  lock-obj-pub.i586-pc-linux-gnu.h  lock-obj-pub.i686-unknown-linux-androideabi.h  lock-obj-pub.mingw32.h  lock-obj-pub.x86_64-unknown-gnu.h  lock-obj-pub.x86_64-unknown-linux-androideabi.h  lock-obj.arm-unknown-linux-androideabi.h
tests/: Makefile.am  t-argparse.c  t-argparse.conf  t-common.h  t-lock.c  t-logging.c  t-name-value.c  t-poll.c  t-printf.c  t-spawn.c  t-strerror.c  t-stringutils.c  t-strlist.c  t-version.c
tests/etc/: Registry  t-argparse.conf
windows/: config.h  libgpg-error.def  mkerrcodes.h  readme.txt  unistd.h  version.h  versioninfo.rc
windows/VS2015/: libgpg-error.sln  libgpgdll-error.vcxproj  libgpgdll-error.vcxproj.filters  libgpglib-error.vcxproj  libgpglib-error.vcxproj.filters  mkerrcodes.vcxproj  mkerrcodes.vcxproj.filters  mkheader.vcxproj  mkheader.vcxproj.filters
windows/include/: code-from-errno.h  code-to-errno.h  err-codes-sym.h  err-codes.h  err-sources-sym.h  err-sources.h  errnos-sym.h  gpg-error.h
windows/sys/: file.h
