# Gnulib
EXTRA_DIST = autobuild.m4 codeset.m4 gettext.m4 host-cpu-c-abi.m4       \
             iconv.m4 intlmacosx.m4 lib-ld.m4 lib-link.m4               \
             lib-prefix.m4 lock.m4 nls.m4 po.m4 progtest.m4             \
             readline.m4 threadlib.m4

# libtool
EXTRA_DIST += libtool.m4 ltoptions.m4 ltsugar.m4 ltversion.m4	\
              lt~obsolete.m4

# Autoconf-archive
EXTRA_DIST += ax_cc_for_build.m4

EXTRA_DIST += estream.m4 gnupg-misc.m4
